Fix fancy page header overflowing page width
Q: Why does vw include scrollbar width?
A: Because standard writers are stupid.

--- a/styles/page.scss
+++ b/styles/page.scss
@@ -1,5 +1,10 @@
 @import 'site';
 
+body {
+	// Fix the fancy h1 overflowing width (because 100vw includes scrollbar).
+	overflow-x: hidden;
+}
+
 .page-hero {
 	margin-top: 0 - $top-navbar-offset;
 	padding: $top-navbar-offset 0 112px 0;
@@ -34,11 +39,12 @@ main {
 	}
 
 	> h1:first-child {
-		width: 100vw;
+		$padding-y: 1rem;
+		width: calc(100vw - #{$padding-y * 2});
 		margin-top: -160px;
 		margin-bottom: 48px;
 		margin-left: calc(50% - 50vw);	// Shove to left edge, ignoring container.
-		padding-bottom: 32px;
+		padding: 0 $padding-y 32px $padding-y;
 		background-image: $top-navbar-background;
 		color: $text-light;
 
